crates/cribo/tests/snapshots/bundled_code@bundle_third_party_sys_modules_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_sys_modules_alias/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('alias_pkg.system', '_cribo_init___cribo_447ffd_alias_pkg_system', 'alias_pkg_system', False)
_cribo_finder_local.register('alias_pkg', '_cribo_init___cribo_da5146_alias_pkg', 'alias_pkg', True)
alias_pkg = _cribo.types.SimpleNamespace(__name__='alias_pkg', __initializing__=False, __initialized__=False, __path__=[])
_cribo_finder.bind('alias_pkg', alias_pkg)
def _cribo_init___cribo_da5146_alias_pkg(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'alias_pkg'
    _cribo_self.__doc__ = 'Package capturing its own module object through aliased sys.modules access.'
    try:
        _cribo_self.__spec__ = None
        _sys.modules[_cribo_self.__name__] = _cribo_self
        """Package capturing its own module object through aliased sys.modules access."""
        loaded = _cribo.sys.modules
        _cribo_self.loaded = loaded
        SELF = _cribo.sys.modules[_cribo_self.__name__]
        _cribo_self.SELF = SELF
        VALUE = "alias-aware"
        _cribo_self.VALUE = VALUE
        _cribo_self.loaded = _cribo.sys.modules
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _sys.modules.get(_cribo_self.__name__, _cribo_self)
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        if _sys.modules.get(_cribo_self.__name__) is _cribo_self:
            del _sys.modules[_cribo_self.__name__]
        raise
alias_pkg.__init__ = _cribo_init___cribo_da5146_alias_pkg
alias_pkg_system = _cribo.types.SimpleNamespace(__name__='alias_pkg.system', __initializing__=False, __initialized__=False)
_cribo_finder.bind('alias_pkg.system', alias_pkg_system)
def _cribo_init___cribo_447ffd_alias_pkg_system(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'alias_pkg'
    _cribo_self.__doc__ = None
    try:
        _cribo_self.__spec__ = None
        _sys.modules[_cribo_self.__name__] = _cribo_self
        system = _cribo.sys
        _cribo_self.system = system
        _cribo_self.system = system
        REGISTERED = _cribo_self.__name__ in _cribo.sys.modules
        _cribo_self.REGISTERED = REGISTERED
        _cribo_self.__initialized__ = True
        _cribo_self.__initializing__ = False
        return _sys.modules.get(_cribo_self.__name__, _cribo_self)
    except _cribo_base_exception:
        _cribo_self.__initializing__ = False
        if _sys.modules.get(_cribo_self.__name__) is _cribo_self:
            del _sys.modules[_cribo_self.__name__]
        raise
alias_pkg_system.__init__ = _cribo_init___cribo_447ffd_alias_pkg_system
alias_pkg.system = alias_pkg_system
__cribo_init_result = _cribo_init___cribo_da5146_alias_pkg(alias_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(alias_pkg, attr, getattr(__cribo_init_result, attr))
alias_pkg = alias_pkg
__cribo_init_result = _cribo_init___cribo_da5146_alias_pkg(alias_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(alias_pkg, attr, getattr(__cribo_init_result, attr))
alias_pkg_system = _cribo_init___cribo_447ffd_alias_pkg_system(alias_pkg_system)
print(alias_pkg.SELF.VALUE)
print("registered:", alias_pkg.system.REGISTERED)
system = alias_pkg.system
